--- a/discussion.tex
+++ b/discussion.tex
@@ -9,7 +9,7 @@ One hypothesis I set out to test was that heel-strike would produce larger groun
 
 \subsection{Toe-strike (forefoot strike) may produce larger horizontal GRFs on pushoff?}
 
-The force plate kymograph data suggest that forefoot-strike produces a larger horizontal ground reaction force upon pushoff. The improvised instrumentation I used was too crude to observe the magnitude and timing of horizontal ground reaction forces; and an alternative explanation could be that the pavers used in the force plate have nonlinear friction in one direction that resulted in the observed patterns (yellow arrows in \fref{fig:results:forceplate}). However, given that for the same speed, toe-striking used a shorter duty cycle (\fref{fig:results:stride} and \fref{tab:results:stride}) it seems reasonable that, with less contact time with the ground per step, the horizontal ground reaction forces to keep moving forward at the same speed would need to be higher during some part of the cycle.
+The force plate kymograph data suggest that forefoot-strike produces a larger horizontal ground reaction force upon pushoff. The improvised instrumentation I used was too crude to observe the magnitude and timing of horizontal ground reaction forces; and an alternative explanation could be that the pavers used in the force plate have nonlinear friction in one direction that resulted in the observed patterns (yellow arrows in \fref{fig:results:forceplate}). However, given that for the same speed, forefoot-striking used a shorter duty cycle (\fref{fig:results:stride} and \fref{tab:results:stride}) it seems reasonable that, with less contact time with the ground per step, the horizontal ground reaction forces to keep moving forward at the same speed would need to be higher during some part of the cycle.
 
 
 
