--- a/trombetta.tex
+++ b/trombetta.tex
@@ -4,6 +4,11 @@
 \author{John Trombetta\thanks{Author is with the Department of Mechanical Engineering at the United States Naval Academy. Address for correspondence: \emph{m236348@usna.edu}}}
 \date{\today}
 
+% todo 
+% add force sensor dimensions in metric, and to force sensor drawing legend
+% fill in trombetta shoe make and model, how was he trained to do forefoot strike
+% add camera distance
+% how was camera mounted / who filmed / whose treadmill / add to acknowledgements? 
 
 \usepackage[separate-uncertainty=true,multi-part-units=single]{siunitx}
 \DeclareSIUnit{\year}{y}
