--- a/methods.tex
+++ b/methods.tex
@@ -10,12 +10,12 @@ I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\f
 
 \subsection{Improvised force plate kymograph}
 % In this section or in intro add citations to bell1984quantifying, denny1983simple, baker2007history, mayer2010physiological, marey1873locomotion, marey1885method, muybridge1925animals, muybridge1955human, carlet1872essai...  
-To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, inspired by \citet{denny1983simple} and \citet{bell1984quantifying} and by early instrumentation \citep{baker2007history, mayer2010physiological, marey1873locomotion, carlet1872essai}, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 21 x 0.5}{\inch} sheet of scrap bead board simply supported at the ends between two masonry pavers each \SI{2.25}{\inch} thick. I attached a red dry erase marker (Expo; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x14}{\inch} whiteboard (Staples; Riverdale, NJ) on the side. A paper target was provided so that the subject would consistently step on the force plate. 
+To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, inspired by \citet{denny1983simple} and \citet{bell1984quantifying} and by early instrumentation \citep{baker2007history, mayer2010physiological, marey1873locomotion, carlet1872essai}, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 21 x 0.5}{\inch} (\SI{1.23 x 0.53 x 0.013}{\meter}) sheet of scrap bead board simply supported at the ends between two masonry pavers each \SI{2.25}{\inch} (\SI{0.057}{\meter}) thick. I attached a red dry erase marker (Expo; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x14}{\inch} whiteboard (Staples; Riverdale, NJ) on the side. A paper target was provided so that the subject would consistently step on the force plate. 
 \begin{figure}
 \begin{center}
 \includegraphics{figures/fig-methods-1.png}
 \end{center}
-\caption{Improvised one-axis force plate kymograph; (A) complete setup; (B) side and top views and example tracing. As the beadboard flexes under load, the marker traces the lowest point reached, providing a measurement of maximum vertical ground reaction force (GRF).}
+\caption{Improvised one-axis force plate kymograph; (A) complete setup; (B) side and top views and example tracing. As the beadboard flexes under load, the marker traces the lowest point reached, providing a measurement of maximum vertical ground reaction force (GRF). Force plate dimensions \SI{48 x 21 x 0.5}{\inch} (\SI{1.25 x 0.53 x0.013}{\meter}); pavers are \SI{2.25}{\inch} (\SI{0.057}{\meter}) tall.}
 \label{fig:methods:forceplate}
 \end{figure}
 The lowest point reached by the marker is a linear measure of the maximum vertical GRF experienced during contact. Additionally, I found that horizontal GRF would displace the flexure horizontally, providing some indication of their general magnitude. For a point load applied in the middle, the displacement $\delta$ (i.e. marker movement) from point load $F$ (i.e. vertical GRF) is given by \cite{craig2011mechanics}: 
