--- a/methods.tex
+++ b/methods.tex
@@ -2,15 +2,12 @@
 \label{sec:methods}
 
 \subsection{Experimental subject}
-I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\foot} \SI{10}{\inch} (\SI{1.78}{\meter}), mass \SI{150}{\pound} (\SI{68.0}{\kilo\gram}). For this subject, measured hip height from the ground was \SI{36}{\inch} (\SI{0.91}{\meter}). For scale purposes, the subject shoe size was US9.5M, heel to toe length \SI{0.30}{\meter}. During running trials, the subject wore physical training gear consisting of running shorts, a tshirt, white ankle socks, and athletic shoes (Lunarlite; Nike, Beaverton, OR) \textbf{FIX} with high contrast black uppers and a white sole and heel that aided in manual digitization as the subject did not wear other markers. The subject was in outstanding physical condition, having completed his first year as a midshipman at the US Naval Academy, including its renowned Physical Education Program. The subject provided his informed consent before measurements\footnote{This pilot study was conducted under the following exemption: The project in EW282D is designed to teach research methods through student interaction with data about individuals. Student class assignments typically do not meet the federal regulatory definition of research, thus do not require institutional review board application, approval, or oversight.}.  
-
-\textbf{How was subject trained to do heel strike versus toe strike (foot strike) running styles?}
-
+I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\foot} \SI{10}{\inch} (\SI{1.78}{\meter}), mass \SI{150}{\pound} (\SI{68.0}{\kilo\gram}). For this subject, measured hip height from the ground was \SI{36}{\inch} (\SI{0.91}{\meter}). For scale purposes, the subject shoe size was US9.5M, heel to toe length \SI{0.30}{\meter}. During running trials, the subject wore physical training gear consisting of running shorts, a tshirt, white ankle socks, and athletic shoes (Cloudflyer; On Running; Zurich, Switzerland) with high contrast black uppers and a white sole and heel that aided in manual digitization as the subject did not wear other markers. The subject was in outstanding physical condition, having completed his first year as a midshipman at the US Naval Academy, including its renowned Physical Education Program. The subject provided his informed consent before measurements\footnote{This pilot study was conducted under the following exemption: The project in EW282D is designed to teach research methods through student interaction with data about individuals. Student class assignments typically do not meet the federal regulatory definition of research, thus do not require institutional review board application, approval, or oversight.}.  The subject was relatively new to forefoot strike. He had been running using heel strike for many years, but has transitioned as part of USNA physical training, under the direction and assistance of upperclass experienced in the technique as well as a company officer and a senior enlisted command fitness leader. 
 
 
 \subsection{Improvised force plate kymograph}
 % In this section or in intro add citations to bell1984quantifying, denny1983simple, baker2007history, mayer2010physiological, marey1873locomotion, marey1885method, muybridge1925animals, muybridge1955human, carlet1872essai...  
-To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, inspired by \citet{denny1983simple} and \citet{bell1984quantifying} and by early instrumentation \citep{baker2007history, mayer2010physiological, marey1873locomotion, carlet1872essai}, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 21 x 0.5}{\inch} (\SI{1.23 x 0.53 x 0.013}{\meter}) sheet of scrap bead board simply supported at the ends between two masonry pavers each \SI{2.25}{\inch} (\SI{0.057}{\meter}) thick. I attached a red dry erase marker (Expo; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x14}{\inch} whiteboard (Staples; Riverdale, NJ) on the side. A paper target was provided so that the subject would consistently step on the force plate. 
+To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, inspired by \citet{denny1983simple} and \citet{bell1984quantifying} and by early instrumentation \citep{baker2007history, mayer2010physiological, marey1873locomotion, carlet1872essai}, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 21 x 0.5}{\inch} (\SI{1.23 x 0.53 x 0.013}{\meter}) sheet of scrap bead board simply supported at the ends between two masonry patio pavers each \SI{2.25}{\inch} (\SI{0.057}{\meter}) thick. I attached a red dry erase marker (Expo; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x14}{\inch} whiteboard (Staples; Riverdale, NJ) on the side. A paper target was provided so that the subject would consistently step on the force plate following one or two run-up steps; the subject reported consistent pacing was difficult and may be a source of experimental error in this technique.
 \begin{figure}
 \begin{center}
 \includegraphics{figures/fig-methods-1.png}
@@ -37,7 +34,7 @@ In addition to the rough indication of vertical GRF from the improvised force pl
 
 \subsection{Video kinematics on a treadmill}
 % In this section or in intro add citations to baker2007history, mayer2010physiological, marey1873locomotion, marey1885method, muybridge1925animals, muybridge1955human, carlet1872essai... 
-To examine changes in kinematics and gait during the different running styles, I filmed the subject running on a treadmill (Performance 800; TRUE Fitness; St Louis, MO). Ideally I would have used a high speed camera (TS5; Fastec; San Diego, CA), however, COVID-19 required me to improvise. Instead, I used a smartphone camera (iPhone 11; Apple; Cupertino, CA) filming from the left at \SI{1}{\meter} \textbf{FIX}. The camera operated at \SI{30}{\frame\per\second} and \num{1920x1080} pixel resolution. The treadmill was operated at \SI{8}{mph} (\SI{3.6}{\meter\per\second}) for both tests; the subject began running on the treadmill and reached a steady pace before filming.  Two segments were obtained for analysis, \SI{11}{\second} and \SI{13}{\second} in length, for heel-strike and forefoot-strike styles, providing \SI{358}{\frame} and \SI{416}{\frame}, respectively.
+To examine changes in kinematics and gait during the different running styles, I filmed the subject running on a treadmill (Performance 800; TRUE Fitness; St Louis, MO). Ideally I would have used a high speed camera (TS5; Fastec; San Diego, CA), however, COVID-19 required me to improvise. Instead, I used a smartphone camera (iPhone 11; Apple; Cupertino, CA) filming from the left at approximately \SIrange{1}{2}{\meter}. The camera was held by hand and operated at \SI{30}{\frame\per\second} and \num{1920x1080} pixel resolution. The treadmill was operated at \SI{8}{mph} (\SI{3.6}{\meter\per\second}) for both tests; the subject began running on the treadmill and reached a steady pace before filming.  Two segments were obtained for analysis, \SI{11}{\second} and \SI{13}{\second} in length, for heel-strike and forefoot-strike styles, providing \SI{358}{\frame} and \SI{416}{\frame}, respectively.
 \begin{figure}
 \begin{center}
 \includegraphics{figures/fig-methods-2.png}
