--- a/trombetta.tex
+++ b/trombetta.tex
@@ -58,7 +58,7 @@ The goal of my research was to study the effectiveness and injury risk of heel s
 \input{discussion.tex} %\section{Discussion}
 
 \section{Acknowledgements}
-I thank Cameron Smith, Alexis Pak, and Sofia Figueroa for their assistance as classmates in EW282D / EW496. USNA Biomechanics is supported by Lockheed Martin. 
+I thank Cameron Smith, Alexis Pak, and Sofia Figueroa for their assistance as classmates in EW282D / EW496. I also thank my father, Nick Trombetta, for lending use of a treadmill and for assistance with filming video kinematics. USNA Biomechanics is supported by Lockheed Martin. 
 
 % References
 \bibliography{trombetta.bib}
