--- a/methods.tex
+++ b/methods.tex
@@ -2,7 +2,7 @@
 \label{sec:methods}
 
 \subsection{Experimental subject}
-I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\foot} \SI{10}{\inch} (\SI{1.78}{\meter}), mass \SI{150}{\pound} (\SI{68.0}{\kilo\gram}). For this subject, measured hip height from the ground was \SI{36}{\inch} (\SI{0.91}{\meter}). For scale purposes, the subject shoe size was US9.5M, heel to toe length \SI{0.30}{\meter}. During running trials, the subject wore physical training gear consisting of running shorts, a tshirt, white ankle socks, and athletic shoes (Cloudflyer; On Running; Zurich, Switzerland) with high contrast black uppers and a white sole and heel that aided in manual digitization as the subject did not wear other markers. The subject was in outstanding physical condition, having completed his first year as a midshipman at the US Naval Academy, including its renowned Physical Education Program. The subject provided his informed consent before measurements\footnote{This pilot study was conducted under the following exemption: The project in EW282D is designed to teach research methods through student interaction with data about individuals. Student class assignments typically do not meet the federal regulatory definition of research, thus do not require institutional review board application, approval, or oversight.}.  The subject was relatively new to forefoot strike. He had been running using heel strike for many years, but has transitioned as part of USNA physical training, under the direction and assistance of upperclass experienced in the technique as well as a company officer and a senior enlisted command fitness leader. 
+I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\foot} \SI{10}{\inch} (\SI{1.78}{\meter}), mass \SI{150}{\pound} (\SI{68.0}{\kilo\gram}). For this subject, measured hip height from the ground was \SI{36}{\inch} (\SI{0.91}{\meter}). For scale purposes, the subject shoe size was US9.5M, heel to toe length \SI{0.30}{\meter}. During running trials, the subject wore physical training gear consisting of running shorts, a tshirt, white ankle socks, and athletic shoes (Cloudflyer; On Running; Zurich, Switzerland) with high contrast black uppers and a white sole and heel that aided in manual digitization as the subject did not wear other markers. The subject was in outstanding physical condition, having completed his first year as a midshipman at USNA, including its renowned Physical Education Program. The subject provided his informed consent before measurements\footnote{This pilot study was conducted under the following exemption: The project in EW282D is designed to teach research methods through student interaction with data about individuals. Student class assignments typically do not meet the federal regulatory definition of research, thus do not require institutional review board application, approval, or oversight.}.  The subject was relatively new to forefoot strike. He had been running using heel strike for many years, but has transitioned as part of USNA physical training, under the direction and assistance of upperclass experienced in the technique as well as a company officer and a senior enlisted command fitness leader. 
 
 
 \subsection{Improvised force plate kymograph}
