Added lineno and endfloat for editing use

--- a/trombetta.tex
+++ b/trombetta.tex
@@ -1,4 +1,8 @@
 \documentclass[10pt]{article}
+% for editing use
+%\usepackage{lineno}
+%\linenumbers
+%\usepackage{endfloat}
 
 \title{Running biomechanics and the effect of heel versus forefoot strike}
 \author{John Trombetta\thanks{Author is with the Department of Mechanical Engineering at the United States Naval Academy. Address for correspondence: \emph{m236348@usna.edu}}}
